<resources>
    <string name="app_name">FTPNext</string>
    <string name="navigation_drawer_open">Open navigation drawer</string>
    <string name="navigation_drawer_close">Close navigation drawer</string>

    <string name="nav_header_subtitle">android.studio@android.com</string>
    <string name="nav_header_desc">Navigation header</string>

    <string name="action_settings">Settings</string>
    <string name="configure_ftp_server">Configure FTP Server</string>
    <string name="settings">Settings</string>
    <string name="ftp_navigation">FTP Navigation</string>
    <string name="existing_files">Existing files</string>

    <string name="existing_file_ask_each_time">Ask each time</string>
    <string name="existing_file_resume_download">Resume download</string>
    <string name="existing_file_replace_file">Replace file</string>
    <string name="existing_file_if_more_recent">Replace file if remote file is more recent</string>
    <string name="existing_file_if_sizes_diff">Replace file if sizes are different</string>
    <string name="existing_file_if_sizes_are_diff_or_more_recent">Replace file if sizes are different or if remote file is more recent</string>
    <string name="existing_file_rename_file">Rename file and keep both</string>
    <string name="existing_file_ignore">Ignore</string>

    <string name="service_status_notification">Transfer global status</string>

    <string-array name="edit_server_array">
        <item>Delete</item>
        <item>Edit</item>
    </string-array>

</resources>
